<resources>
    <string name="app_name">Kalkulator Data Kelompok</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kalkulator Data Kelompok</string>
    <string name="nav_header_subtitle">by Cornelius Linux</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Kalkulator</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="nilai_kiri">Nilai Kiri</string>
    <string name="nilai_kanan">Nilai Kanan</string>
    <string name="frekuensi">Frekuensi</string>
    <string name="tepi_bawah">Tepi Bawah</string>
    <string name="tepi_atas">Tepi Atas</string>
    <string name="xi">Xi</string>
    <string name="fk">Fk</string>
    <string name="xs">Xs</string>
    <string name="xi_minus_xs">Xi - Xs</string>
    <string name="fi_xi_xs">fi(Xi - Xs)</string>
    <string name="fi_times_xi">fi * Xi</string>

    <string name="donasi">Donasi</string>
    <string name="bersihkan_tabel">Bersihkan tabel</string>
    <string name="save">Save</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="hasil_perhitungan">Hasil Perhitungan</string>
    <string name="rata_rata">Rata-Rata \t=</string>
    <string name="median">Median \t\t\t=</string>
    <string name="modus">Modus \t\t\t\t=</string>
    <string name="kuartil1">Q1 \t\t\t\t\t\t\t\t=</string>
    <string name="kuartil2">Q2 \t\t\t\t\t\t\t\t=</string>
    <string name="kuartil3">Q3 \t\t\t\t\t\t\t\t=</string>
    <string name="desil">Desil \t\t\t\t\t\t=</string>
    <string name="persentil">Persentil \t\t=</string>
    <string name="noResult">-</string>

</resources>