<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kalkulator.KalkulatorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rellayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:scrollbars="horizontal|vertical">

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_gravity="center_horizontal"
            android:scrollbars="horizontal|vertical">

            <TableLayout
                android:id="@+id/tlDistribusiFrekuensi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TableRow android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/nilai_kiri" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/nilai_kanan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/frekuensi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/fk" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/tepi_bawah" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/tepi_atas" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/xi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/xs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/xi_minus_xs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/fi_xi_xs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/border_blue"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/fi_times_xi" />
                </TableRow>

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/rellayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@id/linear"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border_blue"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/hasil_perhitungan"
                android:textSize="@dimen/text_header"
                android:layout_weight="1"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgMore"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_more_horiz_24"
                android:layout_gravity="end"
                android:contentDescription="More Result" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rata_rata"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtMean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/noResult"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/median"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtMedian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/noResult"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modus"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtModus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/noResult"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/etKiri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/nilai_kiri"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etKanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/nilai_kanan"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etFrekuensi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/frekuensi"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLines="1" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Add Data" />
    </LinearLayout>
</RelativeLayout>